Spring Boot 3 integration